unified help/tips color boxes (fixes tips alignment regression)
Also, used times signs instead of lower-cases "x"es for speed
multipliers, and requested tabular numbers (though I don't believe
this makes any difference for Segoe UI, the first-requested font in
tips and the one that should always appear when running the app).

--- a/help.css
+++ b/help.css
@@ -109,38 +109,6 @@ kbd:hover {
   background-color: #e2e2ff;
 }
 
-.box {
-  border: 1px solid black;
-  display: inline-block;
-  height: .9em;
-  vertical-align: -10%;
-  width: .9em;
-}
-
-.box-black {
-  background-color: black;
-}
-
-.box-red {
-  background-color: red;
-}
-
-.box-blue {
-  background-color: blue;
-}
-
-.box-yellow {
-  background-color: yellow;
-}
-
-.box-purple {
-  background-color: purple;
-}
-
-.box-orange {
-  background-color: orange;
-}
-
 .proselike {
   margin: 10px 0;
 }
